# swaggerDesign.json
@@ -69,6 +69,45 @@
           }
         }
       },
+      "/theme/{themeName}": {
+        "delete": {
+          "tags": ["theme"],
+          "summary": "Delete Themes by name",
+          "description": "Each theme has a unique name, this will basically find a single theme by an exact name almost like an id",
+          "operationId": "findThemeByName",
+          "produces": ["application/json"],
+          "parameters": [
+            {
+              "name": "themeName",
+              "in": "path",
+              "description": "Theme name string is required and functions as id",
+              "required": true,
+              "type": "string",
+              "items": {
+                "type": "string",
+                "default": "available"
+              },
+              "collectionFormat": "csv"
+            }
+          ],
+          "security": [
+            {
+              "petstore_auth": ["write:pets", "read:pets"]
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "successful operation",
+              "schema": {
+                "type": "object"
+              }
+            },
+            "400": {
+              "description": "Invalid theme name value"
+            }
+          }
+        }
+      },
       "/user": {
         "post": {
           "tags": ["user"],
